--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            p .project-text {
+            .project-text {
                 font-size: 0.5em;
                 color: #FB8500;
                 text-align: left;
@@ -765,7 +765,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            p .skill-text {
+            .skill-text {
                 font-size: 0.5em;
                 color: #FFB703;
                 text-align: left;
@@ -782,7 +782,7 @@
                 margin-top: 30vh;
             }
 
-            p .project_desc {
+            .project_desc {
                 font-size: 0.6em;
             }
 
@@ -847,8 +847,8 @@
                 padding-bottom: 0.625em;
             }
 
-            p .project_desc {
-                font-size: 1em;
+            .project_desc{
+                font-size:1em; 
             }
 
             .fa-file {
@@ -1370,7 +1370,7 @@
                 align-items: center;
                 /* height: 25em;*/
                 height: 40%;
-                width: 50%;
+                width: 50%; 
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
                 background: linear-gradient(#219EBC, #011f2f) padding-box, linear-gradient(var(--angle),
@@ -1612,7 +1612,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            p .project-text {
+            .project-text {
                 font-size: 1em;
                 color: #FB8500;
                 text-align: left;
@@ -1624,7 +1624,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            p .skill-text {
+            .skill-text {
                 font-size: 1em;
                 color: #FFB703;
                 text-align: left;
@@ -1641,7 +1641,7 @@
                 margin-top: 30vh;
             }
 
-            p .project_desc {
+            .project_desc {
                 font-size: 1.5em;
             }
 
@@ -1706,7 +1706,7 @@
                 padding-bottom: 0.625em;
             }
 
-            p .project_desc {
+            .project_desc {
                 font-size: 10em;
             }
 
@@ -1770,7 +1770,7 @@
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
-                font-size: 6em;
+                font-size: 5em;
             }
 
             .line-1 {
@@ -1789,7 +1789,7 @@
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
-                font-size: 6em;
+                font-size: 5.3em;
                 padding-top: 1vh;
             }
 
@@ -1826,7 +1826,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
                 color: #FB8500;
                 padding: 5px;
-                font-size: 3.5em;
+                font-size: 2.5em;
             }
 
             h3 {
@@ -1836,18 +1836,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
                 color: #FFB703;
                 padding: 5px;
-                font-size: 2.5em;
-                margin-top: 40vh;
-            }
-
-            h3 .project-title {
-                font-family: 'Dosis', sans-serif;
-                font-family: 'Poppins', sans-serif;
-                font-family: 'Raleway', sans-serif;
-                font-family: 'Roboto Condensed', sans-serif;
-                color: #8ECAE6;
-                padding: 5px;
-                font-size: 3em;
+                font-size: 1.8em;
                 margin-top: 40vh;
             }
 
@@ -1859,7 +1848,7 @@
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
-                font-size: 1.8em;
+                font-size: 1.6em;
                 opacity: 0;
                 animation: fadeIn 4s 3s forwards;
             }
@@ -2495,8 +2484,8 @@
 
             .project-box {
                 /* flex: 1 0 30%; */
-                width: 30vw;
-                height: 40vh;
+                width: 30vw; 
+                height: 75vh;
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
@@ -2521,7 +2510,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-             .project-text {
+            .project-text {
                 font-size: 1em;
                 color: #FB8500;
                 text-align: left;
@@ -2550,7 +2539,7 @@
                 margin-top: 40vh;
             }
 
-            p .project_desc {
+            .project_desc {
                 font-size: 1em;
             }
 
@@ -2653,8 +2642,8 @@
                 padding-bottom: 0.625em;
             }
 
-            p .project_desc {
-                font-size: 1em;
+            .project_desc{
+                font-size: 1em; 
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
@@ -2662,19 +2651,18 @@
                 color: #FFB703;
             }
 
-            .left_text {
+            .left_text{
                 text-align: left;
             }
 
-            .right_text {
+            .right_text{
                 text-align: right;
             }
 
-            .add_margin {
-                margin-top: 2vh;
+            .add_margin{
+                margin-top: 2vh; 
             }
-
-           
+            /* add flip card effect for phones */
         }
     </style>
 </head>
@@ -2688,16 +2676,9 @@
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
-    <i class="fa-solid fa-2x fa-cheveron-down">
-        <br> <i class="fa-solid fa-2x fa-cheveron-down">
-            <br> <i class="fa-solid fa-2x fa-cheveron-down">
-
-
-    <i class="fa-solid fa-2x fa-cheveron-down"> </i>
-
     <div class="container-about-me">
         <div class=" fade-in1 left-oriented about-me">
-            <h2> <a href="#Home" class="link-orange left-text"> ABOUT ME </a> </h2>
+            <h2> <a href = "#Home" class = "link-orange left-text"> ABOUT ME </a> </h2>
             <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
                 Science. I have partaken in multiple research projects at the university level, notably developing a
                 mental
@@ -2721,14 +2702,12 @@
         </div>
     </div>
 
-   
-
     <div class="flex-container educimg">
         <div class=" fade-in2 box2">
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
         <div class="fade-in2 right-oriented education">
-            <h2> <a href="#Home" class="link-orange right_text"> EDUCATION </a> </h2>
+            <h2> <a href = "#Home" class = "link-orange right_text"> EDUCATION </a>  </h2>
             <p> University of Michigan - Ann Arbor </p>
             <p> Bachelor of Science in Engineering in Computer Science </p>
             <p> Expected Graduation: April 2026 </p>
@@ -2743,14 +2722,12 @@
         </div>
     </div>
 
-   
-
 
     <h2 class="fade-in2 proj-cont" style="text-align: center;" id="Projects"> <a href="#Home" class="link-orange">
             PROJECTS </a> </h2>
     <div class="flex-container proj-box-cont">
         <div class="project-box">
-            <h3 class="project-title" style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
+            <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
             <div>
                 <p class="project-desc"> A conversational A.I.-based agent utilizing generative
                     learning and Google
@@ -2769,11 +2746,10 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 class="project-title" style="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
+            <h3 style="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
 
             <div>
-                <p class="project-desc"> Mechanical knee developed with and sponsored by Texas Instruments technology in
-                    order to help with knee rehabilitation, especially with ACL tears. </p>
+                <p class="project-desc"> Mechanical knee developed with and sponsored by Texas Instruments technology in order to help with knee rehabilitation, especially with ACL tears. </p>
             </div>
 
 
@@ -2791,9 +2767,7 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> OneVote </h3>
             <div>
-                <p class="project-title" class="project-desc"> Web application for local elections awareness with a
-                    conversational agent answering questions and guiding users to polling stations, offering details on
-                    ongoing elections, and providing access to candidate websites. </p>
+                <p class="project-desc"> Web application for local elections awareness with a conversational agent answering questions and guiding users to polling stations, offering details on ongoing elections, and providing access to candidate websites. </p>
             </div>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/-eGkraEZ6HA"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
@@ -2809,7 +2783,7 @@
 
     <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
-            <h3 class="project-title" style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
+            <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
             <div>
                 <p class="project-desc"> An application with a visually-appleasing user
                     interface with an integrated
@@ -2828,7 +2802,7 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 class="project-title" style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
+            <h3 style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
             <div>
                 <p class="project-desc"> An interactive game developed with GreenFoot API and
                     Java utilizing
@@ -2847,8 +2821,7 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> My Portfolio </h3>
             <div style="height: 30%;">
-                <p class="project-title" class="project-desc"> Developed portfolio website from scratch to showcase my
-                    bio, education, projects, honors, and contact information. </p>
+                <p class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </p>
             </div>
             <div class="fade-in2 box3 ">
                 <img src="My Projects.png">
@@ -2862,9 +2835,6 @@
             </div>
         </div>
     </div>
-
-   
-
     <div>
         <div class="next-to slideshow-container center fade-in2 honors-cont" id="Honors">
             <div class="mySlides fade">
@@ -2955,7 +2925,7 @@
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
                 School email: sbiddala@umich.edu <br> Personal email: shriyarbiddala@gmail.com</span>
         </i>
-        <!-- &nbsp; &nbsp; &nbsp; &nbsp;
+       <!-- &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-regular fa-file fa-bounce fa-2x">
             <span class="file-lines-text"
                 style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
