--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            .project-text {
+            p .project-text {
                 font-size: 0.5em;
                 color: #FB8500;
                 text-align: left;
@@ -765,7 +765,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            .skill-text {
+            p .skill-text {
                 font-size: 0.5em;
                 color: #FFB703;
                 text-align: left;
@@ -782,7 +782,7 @@
                 margin-top: 30vh;
             }
 
-            .project_desc {
+            p .project_desc {
                 font-size: 0.6em;
             }
 
@@ -847,7 +847,7 @@
                 padding-bottom: 0.625em;
             }
 
-            .project_desc{
+            p .project_desc{
                 font-size:1em; 
             }
 
@@ -1612,7 +1612,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            .project-text {
+           p .project-text {
                 font-size: 1em;
                 color: #FB8500;
                 text-align: left;
@@ -1624,7 +1624,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            .skill-text {
+           p .skill-text {
                 font-size: 1em;
                 color: #FFB703;
                 text-align: left;
@@ -1641,7 +1641,7 @@
                 margin-top: 30vh;
             }
 
-            .project_desc {
+            p .project_desc {
                 font-size: 1.5em;
             }
 
@@ -1706,7 +1706,7 @@
                 padding-bottom: 0.625em;
             }
 
-            .project_desc {
+            p .project_desc {
                 font-size: 10em;
             }
 
@@ -1770,7 +1770,7 @@
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
-                font-size: 5em;
+                font-size: 6em;
             }
 
             .line-1 {
@@ -1789,7 +1789,7 @@
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
-                font-size: 5.3em;
+                font-size: 6em;
                 padding-top: 1vh;
             }
 
@@ -1826,7 +1826,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
                 color: #FB8500;
                 padding: 5px;
-                font-size: 2.5em;
+                font-size: 3.5em;
             }
 
             h3 {
@@ -1836,7 +1836,17 @@
                 font-family: 'Roboto Condensed', sans-serif;
                 color: #FFB703;
                 padding: 5px;
-                font-size: 1.8em;
+                font-size: 2.5em;
+                margin-top: 40vh;
+            }
+            h3 .project-title{
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
+                color: #8ECAE6;
+                padding: 5px;
+                font-size: 3em;
                 margin-top: 40vh;
             }
 
@@ -1848,7 +1858,7 @@
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
-                font-size: 1.6em;
+                font-size: 1.8em;
                 opacity: 0;
                 animation: fadeIn 4s 3s forwards;
             }
@@ -2485,7 +2495,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: 30vw; 
-                height: 75vh;
+                height: 40vh;
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
@@ -2510,7 +2520,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            .project-text {
+            p .project-text {
                 font-size: 1em;
                 color: #FB8500;
                 text-align: left;
@@ -2522,7 +2532,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            .skill-text {
+            p .skill-text {
                 font-size: 1.5em;
                 color: #FFB703;
                 text-align: left;
@@ -2539,7 +2549,7 @@
                 margin-top: 40vh;
             }
 
-            .project_desc {
+            p .project_desc {
                 font-size: 1em;
             }
 
@@ -2642,7 +2652,7 @@
                 padding-bottom: 0.625em;
             }
 
-            .project_desc{
+            p .project_desc{
                 font-size: 1em; 
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
@@ -2727,7 +2737,7 @@
             PROJECTS </a> </h2>
     <div class="flex-container proj-box-cont">
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
+            <h3 class = "project-title" style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
             <div>
                 <p class="project-desc"> A conversational A.I.-based agent utilizing generative
                     learning and Google
@@ -2746,7 +2756,7 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
+            <h3 class = "project-title" style ="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
 
             <div>
                 <p class="project-desc"> Mechanical knee developed with and sponsored by Texas Instruments technology in order to help with knee rehabilitation, especially with ACL tears. </p>
@@ -2767,7 +2777,7 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> OneVote </h3>
             <div>
-                <p class="project-desc"> Web application for local elections awareness with a conversational agent answering questions and guiding users to polling stations, offering details on ongoing elections, and providing access to candidate websites. </p>
+                <p class = "project-title" class="project-desc"> Web application for local elections awareness with a conversational agent answering questions and guiding users to polling stations, offering details on ongoing elections, and providing access to candidate websites. </p>
             </div>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/-eGkraEZ6HA"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
@@ -2783,7 +2793,7 @@
 
     <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
+            <h3 class = "project-title" style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
             <div>
                 <p class="project-desc"> An application with a visually-appleasing user
                     interface with an integrated
@@ -2802,7 +2812,7 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
+            <h3 class = "project-title" style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
             <div>
                 <p class="project-desc"> An interactive game developed with GreenFoot API and
                     Java utilizing
@@ -2821,7 +2831,7 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> My Portfolio </h3>
             <div style="height: 30%;">
-                <p class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </p>
+                <p class = "project-title" class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </p>
             </div>
             <div class="fade-in2 box3 ">
                 <img src="My Projects.png">
