--- a/index.html
+++ b/index.html
@@ -1616,6 +1616,7 @@
                 font-size: 1.5em;
                 color: #FB8500;
                 text-align: left;
+                align-self: left; 
                 padding-top: 5px;
                 padding-left: 5px;
                 font-family: 'Dosis', sans-serif;
@@ -1629,6 +1630,7 @@
                 color: #FFB703;
                 text-align: left;
                 padding-left: 5px;
+                align-self : left; 
             }
 
             .contact {
@@ -2912,6 +2914,10 @@
             <span class="dot" onclick="currentSlide(5)"></span>
         </div>
     </div>
+
+    <div class = "fade-in1 center"> 
+        <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
+        </div>
 
     <div class="fade-in2 fa-3x contact">
         <h2 class="contact-text" id="Contact"> <a href="#Home" class="link-orange" style="color:rgb(194, 103, 0)"> Let's
