--- a/index.html
+++ b/index.html
@@ -2750,10 +2750,10 @@
             <iframe style="color:rgb(197, 105, 1);" src="https://www.wevideo.com/view/3252017933"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
             <div style="height: 10%">
-                <p class="project-text">
+                <p class="project-text" style = "color: #FB8500; text-align: left;">
                     SKILLS:
                 </p>
-                <p class="skill-text"> PyTorch, Kaggle,
+                <p class="skill-text" style = "text-align: left;"> PyTorch, Kaggle,
                     Cloud-instance, Google Search API</p>
             </div>
         </div>
@@ -2769,10 +2769,10 @@
                 style="margin: auto; margin-top: 2vh;"> </iframe>
             <br>
             <div style="height: 10%">
-                <p class="project-text">
+                <p class="project-text" style = "color: #FB8500; text-align: left;">
                     SKILLS:
                 </p>
-                <p class="skill-text"> Electrical Circuits,
+                <p class="skill-text" style = "text-align: left;"> Electrical Circuits,
                     Python, Programming </p>
             </div>
         </div>
@@ -2785,10 +2785,10 @@
                 style="margin: auto; margin-top: 2vh;"> </iframe>
             <br>
             <div style="height: 10%;">
-                <p class="project-text" style="font-size: auto;">
+                <p class="project-text" style = "color: #FB8500; text-align: left;">
                     SKILLS:
                 </p>
-                <p class="skill-text" style="font-size: auto;"> HTML/CSS, Open AI, Web-Development </p>
+                <p class="skill-text" style = "text-align: left;"> HTML/CSS, Open AI, Web-Development </p>
             </div>
         </div>
     </div>
@@ -2808,8 +2808,8 @@
             </div>
             <br>
             <div style="height: 10%;">
-                <p class="project-text"> SKILLS:
-                <p class="skill-text"> OpenCV, PyTorch, HTML/CSS/JS </p>
+                <p class="project-text" style = "color: #FB8500; text-align: left;"> SKILLS:
+                <p class="skill-text" style = "text-align: left;"> OpenCV, PyTorch, HTML/CSS/JS </p>
                 </p>
             </div>
         </div>
@@ -2822,9 +2822,9 @@
             </div>
             <br>
             <div style="height: 10%;">
-                <p class="project-text">
+                <p class="project-text" style = "color: #FB8500; text-align: left;">
                     SKILLS:
-                <p class="skill-text"> GreenFootAPI, Java, Object-Oriented
+                <p class="skill-text" style = "text-align: left;"> GreenFootAPI, Java, Object-Oriented
                     Programming </p>
                 </p>
             </div>
@@ -2840,7 +2840,7 @@
             </div>
             <br>
             <div>
-                <p class="project-text"">
+                <p class="project-text" style = "color: #FB8500; text-align: left;">
                 SKILLS:
             </p>
             <p class=" skill-text"> HTML, CSS, JavaScript </p>
