this gonna mess things up

--- a/index.html
+++ b/index.html
@@ -2497,7 +2497,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: 30vw; 
-                height: 75vh;
+                height: auto; 
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
@@ -2843,7 +2843,7 @@
                 <p class="project-text" style = "color: #FB8500; text-align: left;">
                 SKILLS:
             </p>
-            <p class=" skill-text" style = "text-align: left;"> HTML, CSS, JavaScript </p>
+            <p class=" skill-text"> HTML, CSS, JavaScript </p>
             </div>
         </div>
     </div>
