--- a/index.html
+++ b/index.html
@@ -2497,7 +2497,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: 30vw; 
-                height: auto; 
+                height: 40vh; 
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
