--- a/index.html
+++ b/index.html
@@ -2596,7 +2596,7 @@
 
             iframe {
                 width: 100%;
-                height: 30%;
+                height 100%;
             }
 
             .honors-cont {
@@ -2748,7 +2748,7 @@
                     to mental health questions and respective links to resources. </p>
             </div>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.wevideo.com/view/3252017933"
-                style="margin: auto; margin-top: 2vh;"> </iframe>
+                style="margin-top: 2vh;"> </iframe>
             <div style="height: 10%">
                 <p class="project-text" style = "color: #FB8500; text-align: left;">
                     SKILLS:
