--- a/index.html
+++ b/index.html
@@ -2596,7 +2596,7 @@
 
             iframe {
                 width: 100%;
-                height 100%;
+                height: 100%;
             }
 
             .honors-cont {
