--- a/index.html
+++ b/index.html
@@ -2290,8 +2290,8 @@
             }
 
             .box3 img {
-                width:75%;
-                height: 50%;
+                width:100%;
+                height: 100%;
                 object-fit: cover;
             }
 
@@ -2832,7 +2832,7 @@
         </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> My Portfolio </h3>
-            <div style="height: 30%;">
+            <div>
                 <p class = "project-title" class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </p>
             </div>
             <div class="fade-in2 box3 ">
