--- a/index.html
+++ b/index.html
@@ -2843,7 +2843,7 @@
                 <p class="project-text" style = "color: #FB8500; text-align: left;">
                 SKILLS:
             </p>
-            <p class=" skill-text"> HTML, CSS, JavaScript </p>
+            <p class=" skill-text" style = "text-align: left;"> HTML, CSS, JavaScript </p>
             </div>
         </div>
     </div>
