this is scuffed

--- a/index.html
+++ b/index.html
@@ -2914,10 +2914,18 @@
             <span class="dot" onclick="currentSlide(5)"></span>
         </div>
     </div>
-
+<br>
     <div class = "fade-in1 center"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
+        <form method="POST" action="https://script.google.com/macros/s/AKfycbzjjtCKXoeV00PZu41FM6mBIVPkGG9166-oGm456ZPr-fMU0gWSoQ_MfZwadh_jVuU/exec">
+  <input name="Email" type="email" placeholder="Email" required>
+  <input name="Name" type="text" placeholder="Name" required>
+  <input name="Subject" type="text" placeholder="Subject" required>
+  <button type="submit">Send</button>
+</form>
         </div>
+
+        
 
     <div class="fade-in2 fa-3x contact">
         <h2 class="contact-text" id="Contact"> <a href="#Home" class="link-orange" style="color:rgb(194, 103, 0)"> Let's
