this may work idek

--- a/index.html
+++ b/index.html
@@ -2918,10 +2918,10 @@
     <div class = "fade-in1 center"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST" action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
-  <input name="Email" type="email" placeholder="Email" required>
-  <input name="Name" type="text" placeholder="Name" required>
-  <input name="Subject" type="text" placeholder="Subject" required>
-  <button type="submit">Send</button>
+  <p><input name="Email" type="email" placeholder="Email" required> </p> 
+  <p><input name="Name" type="text" placeholder="Name" required></p>
+  <p><input name="Subject" type="text" placeholder="Subject" required></p>
+  <button type="submit" style = "color: #FFB703">Send</button>
 </form>
         </div>
 
