--- a/index.html
+++ b/index.html
@@ -2921,7 +2921,7 @@
   <p><input name="Email" type="email" placeholder="Email" required> </p> 
   <p><input name="Name" type="text" placeholder="Name" required></p>
   <p><input name="Subject" type="text" placeholder="Subject" required></p>
-  <button type="submit" style = "color: #FFB703">Send</button>
+  <button type="submit" style = "background-color: #FFB703">Send</button>
 </form>
         </div>
 
