--- a/index.html
+++ b/index.html
@@ -2918,10 +2918,10 @@
     <div class = "fade-in1 center"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST" action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
-  <input name="Email" type="email" placeholder="Email" required style = "color: #011f2f; font-size: 1.5em;"> 
-  <input name="Name" type="text" placeholder="Name" required>
-  <input name="Subject" type="text" placeholder="Subject" required>
-  <button type="submit" style = "background-color: #804400">Send</button>
+  <input name="Email" type="email" placeholder="Email" required style = "background-color: #8ECAE6; font-size: 2em; color: #003652"> 
+  <input name="Name" type="text" placeholder="Name" required style = "background-color: #8ECAE6; font-size: 2em; color: #003652">
+  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #8ECAE6; font-size: 2em; color: #003652">
+  <button type="submit" style = "background-color: #FFB703; font-size: 3em; color: #003652">Send</button>
 </form>
         </div>
 
