--- a/index.html
+++ b/index.html
@@ -2915,7 +2915,7 @@
         </div>
     </div>
 <br>
-    <div class = "fade-in1 center"> 
+    <div class = "fade-in1 center" style = "margin: auto;"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST" action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
   <input name="Email" type="email" placeholder="Email" required style = "background-color: #8ECAE6; font-size: 2em; text-decoration: #003652"> 
