--- a/index.html
+++ b/index.html
@@ -2918,9 +2918,9 @@
     <div class = "fade-in1 center contact-me-cont"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST" action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
-  <input name="Email" type="email" placeholder="Email" required style = "background-color: #dcf4fc; font-size: 2em; text-decoration: #003652; margin-right:2vw;"> 
-  <input name="Name" type="text" placeholder="Name" required style = "background-color: #dcf4fc; font-size: 2em; text-decoration: #003652; margin-right:2vw;">
-  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #dcf4fc; font-size: 2em; text-decoration: #003652">
+  <input name="Email" type="email" placeholder="Email" required style = "background-color: #adeaff; font-size: 2em; text-decoration: #003652; margin-right:2vw;"> 
+  <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; font-size: 2em; text-decoration: #003652; margin-right:2vw;">
+  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; font-size: 2em; text-decoration: #003652">
   <br> 
   <button type="submit" style = "background-color: #FFB703; font-size: 3em; color: #003652; margin-top: 2vh;">Send</button>
 </form>
