--- a/index.html
+++ b/index.html
@@ -831,6 +831,14 @@
                 margin-left: auto;
                 margin-right: auto;
             }
+            .contact-me-cont {
+                border-width: 1.4em;
+                margin-top: 40vh;
+                width: auto;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            
 
             .contact-text {
                 text-align: center;
@@ -1686,6 +1694,13 @@
             }
 
             .honors-cont {
+                border-width: 1.4em;
+                margin-top: 60vh;
+                width: auto;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .contact-me-cont{
                 border-width: 1.4em;
                 margin-top: 60vh;
                 width: auto;
@@ -2673,6 +2688,16 @@
 
             .add_margin{
                 margin-top: 2vh; 
+            }
+
+            .contact-me-cont{
+                border-width: 1.4em;
+                margin-top: 50vh;
+                margin-right: 5vw;
+                margin-left: 5vw;
+                width: 45vw;
+                margin-left: auto;
+                margin-right: auto;
             }
             /* add flip card effect for phones */
         }
