made boxes scrollable

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                 border-color: #219EBC;
                 border-width: 1em;
                 background-color: #023047;
-                overflow: -moz-hidden-unscrollable;
+                overflow: scroll; 
                 text-align: center;
                 box-shadow: 0 0 1em #6dc7de;
                 padding: 0.4em;
@@ -1604,7 +1604,7 @@
                 border-color: #219EBC;
                 border-width: 1em;
                 background-color: #023047;
-                overflow: -moz-hidden-unscrollable;
+                overflow: scroll; 
                 text-align: center;
                 box-shadow: 0 0 1em #6dc7de;
                 padding: 0.4em;
@@ -2521,7 +2521,7 @@
                 border-color: #219EBC;
                 border-width: 1em;
                 background-color: #023047;
-                overflow: -moz-hidden-unscrollable;
+                overflow: scroll; 
                 text-align: center;
                 box-shadow: 0 0 2em #6dc7de;
                 padding: 2em;
