--- a/index.html
+++ b/index.html
@@ -882,6 +882,15 @@
             .fa-lines-text:hover {
                 visibility: visible;
             }
+
+            text .input{
+                background-color: #adeaff; font-size: 0.5em; text-decoration: #003652; margin-right:0.25vw;
+            }
+
+            button .submit{
+                background-color: #FFB703; font-size: 1em; color: #003652; margin-top: 0.5vh;
+
+            }
         }
 
         @media only screen and (min-width: 451px) and (max-width: 1999px) {
@@ -1749,6 +1758,15 @@
 
             .fa-file-lines-text:hover {
                 visibility: visible;
+            }
+
+            text .input{
+                background-color: #adeaff; font-size: 1.5em; text-decoration: #003652; margin-right:0.5vw;
+            }
+
+            button .submit{
+                background-color: #FFB703; font-size: 2em; color: #003652; margin-top: 1vh;
+
             }
         }
 
@@ -2700,6 +2718,15 @@
                 margin-right: auto;
             }
             /* add flip card effect for phones */
+
+            text .input{
+                background-color: #adeaff; font-size: 2em; text-decoration: #003652; margin-right:2vw;
+            }
+
+            button .submit{
+                background-color: #FFB703; font-size: 3em; color: #003652; margin-top: 2vh;
+
+            }
         }
     </style>
 </head>
@@ -2943,11 +2970,11 @@
     <div class = "fade-in1 center contact-me-cont"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST" action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
-  <input name="Email" type="email" placeholder="Email" required style = "background-color: #adeaff; font-size: 2em; text-decoration: #003652; margin-right:2vw;"> 
-  <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; font-size: 2em; text-decoration: #003652; margin-right:2vw;">
-  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; font-size: 2em; text-decoration: #003652">
+  <input name="Email" type="email" placeholder="Email" required> 
+  <input name="Name" type="text" placeholder="Name" required>
+  <input name="Subject" type="text" placeholder="Subject" required>
   <br> 
-  <button type="submit" style = "background-color: #FFB703; font-size: 3em; color: #003652; margin-top: 2vh;">Send</button>
+  <button type="submit">Send</button>
 </form>
         </div>
 
