--- a/index.html
+++ b/index.html
@@ -2719,7 +2719,7 @@
             }
             /* add flip card effect for phones */
 
-            text .input{
+            .input text{
                 background-color: #adeaff; font-size: 2em; text-decoration: #003652; margin-right:2vw;
             }
 
@@ -2970,11 +2970,11 @@
     <div class = "fade-in1 center contact-me-cont"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST" action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
-  <input name="Email" type="email" placeholder="Email" required> 
-  <input name="Name" type="text" placeholder="Name" required>
-  <input name="Subject" type="text" placeholder="Subject" required>
+  <input name="Email" type="email" placeholder="Email" required class = "text"> 
+  <input name="Name" type="text" placeholder="Name" required class = "text">
+  <input name="Subject" type="text" placeholder="Subject" required class = "text">
   <br> 
-  <button type="submit">Send</button>
+  <button type="submit" class = "submit">Send</button>
 </form>
         </div>
 
