--- a/index.html
+++ b/index.html
@@ -2719,11 +2719,11 @@
             }
             /* add flip card effect for phones */
 
-            .input text{
+            text{
                 background-color: #adeaff; font-size: 2em; text-decoration: #003652; margin-right:2vw;
             }
 
-            button .submit{
+            submit{
                 background-color: #FFB703; font-size: 3em; color: #003652; margin-top: 2vh;
 
             }
