--- a/index.html
+++ b/index.html
@@ -2970,11 +2970,11 @@
     <div class = "fade-in1 center contact-me-cont"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST" action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
-  <input name="Email" type="email" placeholder="Email" required class = "text"> 
-  <input name="Name" type="text" placeholder="Name" required class = "text">
-  <input name="Subject" type="text" placeholder="Subject" required class = "text">
+  <input name="Email" type="email" placeholder="Email" required style = "background-color: #adeaff; text-decoration: #003652;"> 
+  <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; text-decoration: #003652;">
+  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652;">
   <br> 
-  <button type="submit" class = "submit">Send</button>
+  <button class = "submit" type="submit">Send</button>
 </form>
         </div>
 
