--- a/index.html
+++ b/index.html
@@ -2974,7 +2974,7 @@
   <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; text-decoration: #003652; font-size: 1vh">
   <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; font-size: 1vh;">
   <br> 
-  <button type="submit" style =" background-color: #FFB703; font-size: 1.75em; color: #003652; margin-top: 2vh;"">Send</button>
+  <button type="submit" style =" background-color: #FFB703; font-size: 2vh; color: #003652; margin-top: 2vh;"">Send</button>
 </form>
         </div>
 
