--- a/index.html
+++ b/index.html
@@ -2698,10 +2698,12 @@
 
             .left_text{
                 text-align: left;
+                align-self:left; 
             }
 
             .right_text{
                 text-align: right;
+                align-self: right; 
             }
 
             .add_margin{
