--- a/index.html
+++ b/index.html
@@ -2729,6 +2729,12 @@
                 background-color: #FFB703; font-size: 3em; color: #003652; margin-top: 2vh;
 
             }
+
+            input{
+                border-color:#011f2f;
+                border-width:1em; 
+                color: #011f2f; 
+            }
         }
     </style>
 </head>
@@ -2969,12 +2975,12 @@
         </div>
     </div>
 <br>
-    <div class = "fade-in1 center contact-me-cont"> 
+    <div class = "fade-in2 center contact-me-cont"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST" action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
   <input name="Email" type="email" placeholder="Email" required style = "background-color: #adeaff; text-decoration: #003652; font-size: 2vh;"> 
   <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; text-decoration: #003652; font-size: 2vh">
-  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; font-size: 2vh;">
+  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; font-size: 5vh;">
   <br> 
   <button type="submit" style =" background-color: #FFB703; font-size: 2vh; color: #003652; margin-top: 2vh;"">Send</button>
 </form>
