--- a/index.html
+++ b/index.html
@@ -2734,6 +2734,8 @@
                 border-color:#011f2f;
                 border-width:1em; 
                 color: #011f2f; 
+                border-style: solid;
+                font-size: 20px; 
             }
         }
     </style>
@@ -2978,9 +2980,9 @@
     <div class = "fade-in2 center contact-me-cont"> 
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST" action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
-  <input name="Email" type="email" placeholder="Email" required style = "background-color: #adeaff; text-decoration: #003652; font-size: 2vh;"> 
-  <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; text-decoration: #003652; font-size: 2vh">
-  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; font-size: 5vh;">
+  <input name="Email" type="email" placeholder="Email" required style = "background-color: #adeaff; text-decoration: #003652;"> 
+  <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; text-decoration: #003652;">
+  <input name="Subject" type="text" placeholder="Subject <br> <br> <br>" required style = "background-color: #adeaff; text-decoration: #003652;">
   <br> 
   <button type="submit" style =" background-color: #FFB703; font-size: 2vh; color: #003652; margin-top: 2vh;"">Send</button>
 </form>
